--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,18 +68,18 @@ a {
 }
 
 .text-light{
-    color: var(--light);
+    color: white;
 }
 
 .text-gradient{
-    background: linear-gradient(to right, #8e2de2, #4a00e0);
+    background: linear-gradient(to right, #863125, #863125);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 #header nav{
-    background-color: #06d6a0;
+    background-color: #c74634;
     padding: 1em 0;
     width: 100%;
 }
@@ -117,7 +117,7 @@ table{
 }
 
 .table tr:hover{
-    background-color:#06d6a0 ;
+    background-color:#f4efe1 ;
 }
 
 .table tr:hover td > a{
@@ -210,13 +210,13 @@ table{
 }
 
 .radio input[type='radio']:checked + .radio-label:before{
-    background-color: #16db93;
+    background-color: #c74634;
     box-shadow: inset 0 0 0 4px #e9ecef;
 }
 
 .radio input[type='radio']:focus + .radio-label:before{
     outline: none;
-    border-color:#16db93;
+    border-color:#c74634;
 }
 
 .radio input[type='radio']:disabled + .radio-label:before{
@@ -229,7 +229,7 @@ table{
 #add_user .form-group .btn{
     width: 100%;
     padding: .9em 1em;
-    background-color:#16db93; 
+    background-color:#c74634; 
     border: none;
     font-family: 'PT Sans', sans-serif;
     font-size: 1em;
